--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src/ -d dist --presets es2015",
     "babel-dev": "babel-node src/index.js",
-    "babel-db": "babel-node src/load-db.js"
+    "babel-db": "babel-node src/load-db.js",
+    "start": "node dist/index.js"
   },
   "keywords": [
     "seterb",
