--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "express": "^4.15.4",
     "jsdom": "^11.2.0",
-    "lokijs": "^1.5.0"
+    "lokijs": "^1.5.0",
+    "http-status": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -32,7 +33,6 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "http-status": "^1.0.1",
     "nodemon": "^1.12.0"
   }
 }
