--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.4",
+    "http-status": "^1.0.1",
     "jsdom": "^11.2.0",
     "lokijs": "^1.5.0",
-    "http-status": "^1.0.1"
+    "mongoose": "^4.11.13"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,6 +34,7 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bluebird": "^3.5.0",
     "nodemon": "^1.12.0"
   }
 }
