--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "http-status": "^1.0.1",
     "jsdom": "^11.2.0",
     "lokijs": "^1.5.0",
-    "mongoose": "^4.11.13"
+    "mongoose": "^4.11.13",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
