--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Marcos Vinicius de Oliveira Pereira",
   "license": "MIT",
   "dependencies": {
+    "config": "^1.26.2",
     "express": "^4.15.4",
     "http-status": "^1.0.1",
     "jsdom": "^11.2.0",
