--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsdom": "^11.2.0",
     "lokijs": "^1.5.0",
     "mongoose": "^4.11.13",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "bluebird": "^3.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -36,7 +37,6 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "bluebird": "^3.5.0",
     "nodemon": "^1.12.0"
   }
 }
