--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "lokijs": "^1.5.0",
     "mongoose": "^4.11.13",
     "winston": "^2.3.1",
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "nodemon": "^1.12.0"
   }
